--- a/app/assets/stylesheets/votes.css.scss
+++ b/app/assets/stylesheets/votes.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Votes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+li.tour-stop-upvoted .upvote-button {
+  color: red;
+}
+
+li.tour-stop-downvoted .downvote-button {
+  color: red;
+}
