--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -8,7 +8,7 @@
   <%= f.text_field :longitude, required: true,
           placeholder: "16.3800599", label: 'Longitude' %>          
 
-  <div class="action row">
+  <div class="form-submit-controls row">
     <%= button_tag class: 'large button expand' do %>
       <%= fa_icon :save %> Add city
     <% end %>
