--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -1,3 +1,5 @@
+$my-red: #ff0040;
+
 .button {
   &.right-side {
     position: fixed;
@@ -8,5 +10,27 @@
     position: fixed;
     left: 0;
     bottom: 10px;
+  }
+}
+
+button.borderless-button, a.borderless-button {
+  background: none;
+  border: none;
+  display: inline;
+  padding: 0;
+  margin: 0;
+  color: inherit;
+  font-size: inherit;
+  
+  &.red {
+    color: $my-red;
+  }
+  
+  &[disabled] {
+    background: none;
+        
+    .fa {
+      color: #e7e7e7;  
+    }
   }
 }
