--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,3 +1,22 @@
-// Place all the styles related to the Comments controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+section.proposal-comments.row {
+  margin: 0.5rem;
+  
+  article {
+    padding: 0.5rem;
+    
+    &:nth-child(odd) {
+      background-color: #f2f2f2;
+    }    
+    .comment-commenter {
+      color: #07c;
+      margin-right: 0.5rem;
+    }    
+    .comment-time {
+      color: #999;
+      margin-right: 0.2rem;
+    }
+  }  
+  form, form>div {
+    display: inline;
+  } 
+}
