--- a/app/assets/stylesheets/votes.css.scss
+++ b/app/assets/stylesheets/votes.css.scss
@@ -1,11 +1,9 @@
-// Place all the styles related to the Votes controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+$my-red: #ff0040;
 
 li.tour-stop-upvoted .upvote-button {
-  color: red;
+  color: $my-red;
 }
 
 li.tour-stop-downvoted .downvote-button {
-  color: red;
+  color: $my-red;
 }
