--- a/app/views/tours/_form.html.erb
+++ b/app/views/tours/_form.html.erb
@@ -4,7 +4,7 @@
 
 <%= form_for @tour, builder: FoundationFormBuilder::Icons do |f| %>
   <%= f.text_field :name,
-          placeholder: 'My New Tour', autofocus: true, required: true,
+          placeholder: 'My New Event', autofocus: true, required: true,
           label: { icon: fa_icon('child'), title: 'Tour name'} %>
           
   <%= f.collection_select :city_id, City.order(:name), :id, :name,
@@ -15,17 +15,13 @@
           required: true,
           label: { icon: fa_icon('calendar'), title: 'Starting time' } %>
           
-  <%= f.text_field :image,
-          placeholder: '(Optional) images.google.com/potato.png',
-          label: { icon: fa_icon('file-image-o'), title: 'Image' }%>
-          
   <%= f.text_area :description,
           placeholder: '(Optional) Leave a description of your event!',
           label: { icon: fa_icon('quote-left'), title: 'Description' } %>
 
   <div class="form-submit-controls row">
     <%= button_tag class: 'large button expand' do %>
-      <%= fa_icon :save %> Save Tour
+      <%= fa_icon :save %> Save Event
     <% end %>
   </div>
 <% end %>
