Moved new comment form directly onto tour page.

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -15,8 +15,16 @@ section.proposal-comments.row {
       color: #999;
       margin-right: 0.2rem;
     }
-  }  
-  form, form>div {
-    display: inline;
-  } 
+    textarea {
+      font-size: inherit;
+    }
+  }
+  
+  form {
+    margin-top: 0.5rem;
+    
+    textarea {
+      font-size: inherit;
+    }
+  }
 }
