Added voting histogram for each venue proposal.

--- a/app/assets/stylesheets/tour_stops.css.scss
+++ b/app/assets/stylesheets/tour_stops.css.scss
@@ -32,6 +32,10 @@ div.proposals ol {
       form {
         display: inline;
       }
+      
+      section#voting-histogram div {
+        padding: 0.1rem;
+      }
     }
   }
 }
