--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,3 +1,8 @@
+$my-red: #ff0040;
+$my-green: #a1ff00;
+$my-purple: #35007a;
+$my-blue: #0000b3;
+
 body {
   background-color: #fff;
   color: #333;
@@ -19,13 +24,13 @@ pre {
 }
 
 a {
-  color: #000;
+  color: $my-blue; //#01c; //#000;
   
   &:visited {
     //color: #666;
   }
   &:hover {
-    color: #666; //#fff;
+    color: lighten( $my-blue, 20% ); //#666; //#fff;
     background-color: inherit; //#000;
   }
 }
