--- a/app/views/tours/_status_decision_buttons.html.erb
+++ b/app/views/tours/_status_decision_buttons.html.erb
@@ -1,7 +1,7 @@
 <span class="status-decision-buttons">
   <%= form_for tour_stop do |f| %>
     <%= f.hidden_field :status, value: 'yes' %>
-    <% if tour_stop.status === 'yes' %>
+    <% if tour_stop.status == 'yes' %>
       <%= f.button type: :submit, disabled: true, class: 'borderless-button' do %>
         <%= fa_icon :'check fw' %>
       <% end %>
@@ -13,7 +13,7 @@
   <% end %>
   <%= form_for tour_stop do |f| %>
     <%= f.hidden_field :status, value: 'no' %>
-    <% if tour_stop.status === 'no' %>
+    <% if tour_stop.status == 'no' %>
       <%= f.button type: :submit, disabled: true, class: 'borderless-button' do %>
         <%= fa_icon :'times fw' %>
       <% end %>
