--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -35,7 +35,7 @@
           <%= link_to tour, class: 'borderless-button' do %>
             <%= fa_icon :eye %>
           <% end %>
-          <% if @current_user === tour.organizer || @current_user.admin? %>
+          <% if @current_user == tour.organizer || @current_user.admin? %>
             <%= link_to edit_venue_path(tour), class: 'borderless-button' do %>
               <%= fa_icon :pencil %>
             <% end %>
