--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -28,6 +28,14 @@
     <%= f.text_field :longitude %>
   </div>
   <div class="field">
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
+  </div>
+  <div class="field">
+    <%= f.label :phone_number %><br>
+    <%= f.text_field :phone_number %>
+  </div>
+  <div class="field">
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
