--- a/app/assets/stylesheets/tour_stops.css.scss
+++ b/app/assets/stylesheets/tour_stops.css.scss
@@ -40,13 +40,19 @@ div.tour-stops ol {
   }
 }
 
-div.note {
-  font-style: italic;
-  font-size: 0.7rem;
-  padding: 0 0.2rem;
-}
-
-
 div.avatar-label {
   display: inline-block;
+  vertical-align: middle;
+  font-size: 1.5rem;
+  
+  div.note {
+    font-size: 0.7rem;
+    font-style: italic;
+    padding: 0 0.2rem;
+  }
+  
+  div.address, div.phone_number {
+    font-size: 0.8rem;
+    padding: 0 0.2rem;
+  }
 }
