--- a/app/views/tours/_tour_stop.html.erb
+++ b/app/views/tours/_tour_stop.html.erb
@@ -17,7 +17,7 @@
     
     <div class="organizer-controls large-10 columns" data-equalizer-watch>
       <h5>
-        <span><%= link_to tour_stop.venue.name, "//www.yelp.com/biz/#{tour_stop.venue.yelp_id}", target: "_blank", data: venue_name_data(tour_stop.venue) %></span>
+        <span class="venue-link-with-dropdown"><%= link_to tour_stop.venue.name, "//www.yelp.com/biz/#{tour_stop.venue.yelp_id}", target: "_blank", data: venue_name_data(tour_stop.venue) %></span>
         
         <%= render partial: "venues/venue_dropdown", locals: {venue: tour_stop.venue} %>
         
