General code cleanup.

--- a/app/views/tours/_rsvp_button.html.erb
+++ b/app/views/tours/_rsvp_button.html.erb
@@ -1,5 +1,5 @@
-<% if @tour.invitation_for(@current_user).exists? %>
-  <%= form_for(@tour.invitation_for(@current_user).first!, method: :delete) do |f| %>
+<% if @tour.invitations_for(@current_user).exists? %>
+  <%= form_for(@tour.invitations_for(@current_user).first!, method: :delete) do |f| %>
     <%= f.hidden_field :tour_id %>
     <%= f.button type: :submit, class: 'borderless-button' do %>
       <%= fa_icon :'sign-out fw' %>
