1. Bare implementation of invitation emails. 2. Start building up seed data. 3. Fixed pagination view and routing bug. 4. Revised indexing and validation for uniqueness of Invitations.

--- a/app/views/tour_stops/_search_form.html.erb
+++ b/app/views/tour_stops/_search_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row" id="search-bar">
   <div class="large-8 columns large-centered">
-    <%= form_for @venue_search, url: search_tour_stops_path do |f| %>
+    <%= form_for @venue_search, url: search_tour_stops_path, method: :get do |f| %>
       <%= f.hidden_field :tour_id %>
       
       <div class="row collapse">
@@ -8,7 +8,7 @@
           <%= f.search_field :query, placeholder: 'Paris Baguette', autofocus: true, required: true %>
         </div>
         <div class="large-2 columns">
-          <%= f.button 'Search', type: :submit, class: 'button postfix' %>
+          <%= f.button 'Search', type: :submit, class: 'button postfix', name: nil %>
         </div>
       </div>      
     <% end %>
