--- a/app/views/tours/_rsvp_button.html.erb
+++ b/app/views/tours/_rsvp_button.html.erb
@@ -1,15 +1,8 @@
-<% if @tour.invitations_for(@current_user).exists? %>
-  <%= form_for(@tour.invitations_for(@current_user).first!, method: :delete) do |f| %>
-    <%= f.hidden_field :tour_id %>
+<% if @current_user.invited_to?(@tour) %>
+  <%= form_for @tour.invitation_for(@current_user) do |f| %>
+    <%= f.hidden_field :status, value: new_invitation_status(@current_user, @tour) %>
     <%= f.button type: :submit, class: 'borderless-button' do %>
-      <%= fa_icon :'sign-out fw' %>
-    <% end %>
-  <% end %>
-<% else %>
-  <%= form_for(@tour.new_invitation) do |f| %>
-    <%= f.hidden_field :tour_id %>
-    <%= f.button type: :submit, class: 'borderless-button' do %>
-      <%= fa_icon :'sign-in fw' %>
+      <%= fa_icon rsvp_button_icon(@current_user, @tour) %>
     <% end %>
   <% end %>
 <% end %>
