EInvitation model: added back 'sender' field. Invitation model: added 'sender' field, changed 'user' field name to 'recipient'.

--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -42,7 +42,7 @@
       <%= fa_icon :'plus' %> Invite!
     <% end %>
     <% Invitation.where(tour_id: @tour.id).each do |invitation| %>
-      <%= avatar_tag invitation.user, "small" %>
+      <%= avatar_tag invitation.recipient, "small" %>
     <% end %>
   </div>
 </div>
