--- a/app/views/e_invitations/_form.html.erb
+++ b/app/views/e_invitations/_form.html.erb
@@ -14,10 +14,10 @@
 <div class="row">
   <div class="large-12 columns">
     <% @current_user.friends.each do |friend| %>
-      <% if !@tour.users.exists?(id: friend.to_param) %>
+      <% if !@tour.invitees.exists?(id: friend.to_param) %>
         <%= form_for @tour.new_invitation_for(friend) do |f| %>
+          <%= f.hidden_field :recipient_id %>
           <%= f.hidden_field :tour_id %>
-          <%= f.hidden_field :user_id %>
           <%= f.button type: :submit, class: 'borderless-button' do %>
             <%= avatar_tag friend, "medium" %>
           <% end %>
