--- a/app/views/tours/_tour_stop.html.erb
+++ b/app/views/tours/_tour_stop.html.erb
@@ -46,7 +46,7 @@
     <div class="large-10 large-offset-2 columns">
       <%= render partial: "tours/comment", collection: tour_stop.comments, as: :comment %>
       
-      <% if @tour.status == "pending" %>
+      <% if @tour.status == "pending" && @current_user.attending?(@tour) %>
         <%= render partial: "comments/form", locals: {tour_stop: tour_stop} %>
       <% end %>
     </div>
