--- a/app/views/e_invitations/_form.html.erb
+++ b/app/views/e_invitations/_form.html.erb
@@ -14,8 +14,8 @@
 <div class="row">
   <div class="large-12 columns">
     <% @current_user.friends.each do |friend| %>
-      <% if !@tour.invitees.exists?(id: friend.to_param) %>
-        <%= form_for @tour.new_invitation_for(friend) do |f| %>
+      <% if !@e_invitation.tour.invitees.exists?(id: friend.to_param) %>
+        <%= form_for @e_invitation.tour.new_invitation_for(friend) do |f| %>
           <%= f.hidden_field :recipient_id %>
           <%= f.hidden_field :tour_id %>
           <%= f.button type: :submit, class: 'borderless-button' do %>
